--- a/evilwoods-server/ansible/templates/caddy/Caddyfile.j2
+++ b/evilwoods-server/ansible/templates/caddy/Caddyfile.j2
@@ -1,8 +1,13 @@
 {
     http_port 8080
     https_port 8443
+    acme_ca https://acme-staging-v02.api.letsencrypt.org/directory
 }
 
-http://* {
-    respond "Hello, World!"
+http://test.evilwoods.net {
+    respond "Hello, World! (http)"
+}
+
+https://test.evilwoods.net {
+    respond "Hello, World! (https)"
 }
