--- a/evilwoods-server/ansible/roles/caddy/templates/caddy.container.j2
+++ b/evilwoods-server/ansible/roles/caddy/templates/caddy.container.j2
@@ -4,8 +4,9 @@ After=network.target
 
 [Container]
 Image=docker.io/library/caddy:2.9
-Volume={{ caddy_config_directory }}:/etc/caddy:Z
+Volume={{ evilwoods_caddy_volume_config_path }}:/etc/caddy:Z
 Volume=caddy_data.volume:/data
+PodmanArgs=--volumes-from=systemd-nextcloud-server:z
 Network=host
 
 [Service]
