move containers to custom network

--- a/evilwoods-server/ansible/roles/immich/templates/immich.pod.j2
+++ b/evilwoods-server/ansible/roles/immich/templates/immich.pod.j2
@@ -2,8 +2,7 @@
 description={{ immich_app_name }} App service
 
 [Pod]
-PodName={{ immich_app_name }}
-PublishPort={{ evilwoods_immich_port }}:2283
+Network={{ evilwoods_container_network }}.network
 
 [Service]
 Restart=always
