--- a/evilwoods-server/ansible/roles/nextcloud/templates/nextcloud-config.php.j2
+++ b/evilwoods-server/ansible/roles/nextcloud/templates/nextcloud-config.php.j2
@@ -2,6 +2,6 @@
 
 $CONFIG = Array(
     'trusted_proxies' => [ '127.0.0.1' ],
-    'trusted_domains' => ['localhost', 'nextcloud.test.evilwoods.net'],
+    'trusted_domains' => [ 'systemd-caddy', 'localhost', 'nextcloud.test.evilwoods.net'],
     'forwarded_for_headers' => ['HTTP_X_FORWARDED_FOR'],
 );
