--- a/evilwoods-server/ansible/roles/caddy/templates/caddy.container.j2
+++ b/evilwoods-server/ansible/roles/caddy/templates/caddy.container.j2
@@ -1,13 +1,16 @@
 [Unit]
 Description=Caddy HTTP/2 web server
-After=network.target
+Wants=podman-user-wait-network-online.service
+After=podman-user-wait-network-online.service
 
 [Container]
 Image=docker.io/library/caddy:2.9
 Volume={{ evilwoods_caddy_volume_config_path }}:/etc/caddy:Z
 Volume=caddy_data.volume:/data
 PodmanArgs=--volumes-from=systemd-nextcloud-server:z
-Network=host
+PublishPort=8080:80
+PublishPort=8443:443
+Network=evilcloud.network
 
 [Service]
 Restart=on-failure
