--- a/evilwoods-server/ansible/roles/caddy/templates/caddy.container.j2
+++ b/evilwoods-server/ansible/roles/caddy/templates/caddy.container.j2
@@ -11,6 +11,7 @@ PodmanArgs=--volumes-from=systemd-nextcloud-server:z
 PublishPort=8080:80
 PublishPort=8443:443
 Network=evilcloud.network
+IP={{ evilwoods_caddy_ip }}
 
 [Service]
 Restart=on-failure
