add dependancy on valkey

--- a/evilwoods-server/ansible/roles/searxng/templates/searxng.container.jinja
+++ b/evilwoods-server/ansible/roles/searxng/templates/searxng.container.jinja
@@ -1,5 +1,7 @@
 [Unit]
 Description=SearXNG Container
+Wants=searxng-valkey.service
+After=searxng-valkey.service
 
 [Container]
 AutoUpdate=registry
