--- a/evilwoods-server/ansible/roles/caddy/templates/caddy.container.jinja
+++ b/evilwoods-server/ansible/roles/caddy/templates/caddy.container.jinja
@@ -1,21 +1,22 @@
 [Unit]
-Description=Caddy HTTP/2 web server
-Wants=podman-user-wait-network-online.service
-After=podman-user-wait-network-online.service
+Description={{ caddy_app_name }} container service.
+Wants=cloudflared.service
+After=cloudflared.service
 
 [Container]
-Image=docker.io/library/caddy:2.9
 AutoUpdate=registry
+Image={{ caddy_image }}
 Volume={{ evilwoods_caddy_volume_config_path }}:/etc/caddy:Z
 Volume=caddy_data.volume:/data
+Volume=nextcloud.volume:/var/www/html:z
 PodmanArgs=--volumes-from=systemd-nextcloud-server:z
 PublishPort=8080:80
 PublishPort=8443:443
-Network=evilcloud.network
+Network={{ evilwoods_container_network }}.network
 IP={{ evilwoods_caddy_ip }}
 
 [Service]
-Restart=on-failure
+Restart=always
 
 [Install]
 WantedBy=default.target
