--- a/evilwoods-server/ansible/roles/immich/templates/immich-valkey.container.jinja
+++ b/evilwoods-server/ansible/roles/immich/templates/immich-valkey.container.jinja
@@ -2,8 +2,8 @@
 Description={{ immich_app_name }} valkey Container/Service
 
 [Container]
-Image=docker.io/valkey/valkey:8-bookworm@sha256:42cba146593a5ea9a622002c1b7cba5da7be248650cbb64ecb9c6c33d29794b1
 AutoUpdate=registry
+Image=docker.io/valkey/valkey:8-alpine
 Volume=immich-valkey-data.volume:/data
 Pod=immich.pod
 
