add depencencies on support containers

--- a/evilwoods-server/ansible/roles/nextcloud/templates/nextcloud-server.container.jinja
+++ b/evilwoods-server/ansible/roles/nextcloud/templates/nextcloud-server.container.jinja
@@ -1,5 +1,7 @@
 [Unit]
 Description=Nextcloud FPM Container
+Wants=nexcloud-postgresql.service nextcloud-valkey.service
+After=nexcloud-postgresql.service nextcloud-valkey.service
 
 [Container]
 AutoUpdate=registry
