set restart interval

--- a/evilwoods-server/ansible/roles/kitchenowl/templates/kitchenowl-get-secrets.service.j2
+++ b/evilwoods-server/ansible/roles/kitchenowl/templates/kitchenowl-get-secrets.service.j2
@@ -10,3 +10,5 @@ Type=oneshot
 EnvironmentFile={{ evilwoods_runner_home }}/.config/bws/env
 ExecStart=/usr/bin/bash -c "bws secret get {{ evilcloud_kitchenowl_jwt_secret }} | jq -r '.value' | podman secret create --replace kitchenowl_jwt_secret -"
 RemainAfterExit=yes
+Restart=on-failure
+RestartSec=1s
