--- a/evilwoods-server/ansible/roles/searxng/templates/searxng-get-secrets.service.j2
+++ b/evilwoods-server/ansible/roles/searxng/templates/searxng-get-secrets.service.j2
@@ -1,6 +1,7 @@
 [Unit]
 Description=Retreive searxng secrets
 # Need to wait for network but user services cannot wait on system services like network-online.target
+PartOf={{ searxng_app_name }}-pod.service
 Wants=podman-user-wait-network-online.service
 After=podman-user-wait-network-online.service
 
