fix service relationship

--- a/evilwoods-server/ansible/roles/cloudflared/templates/cloudflared-get-secret.service.j2
+++ b/evilwoods-server/ansible/roles/cloudflared/templates/cloudflared-get-secret.service.j2
@@ -1,6 +1,7 @@
 [Unit]
 Description=Retreive {{ cloudflared_app_name }} secrets.
 # Need to wait for network but user services cannot wait on system services like network-online.target
+PartOf={{ cloudflared_app_name }}.service
 Wants=podman-user-wait-network-online.service
 After=podman-user-wait-network-online.service
 
