--- a/evilwoods-server/ansible/roles/fusion/templates/fusion.container.j2
+++ b/evilwoods-server/ansible/roles/fusion/templates/fusion.container.j2
@@ -2,7 +2,7 @@
 Description={{ fusion_app_name }} Container Service
 
 [Container]
-AutoUpdate=registr
+AutoUpdate=registry
 Image={{ fusion_image }}
 Volume={{ fusion_data_volume }}:/data:Z,U
 Network={{ evilwoods_container_network }}.network
