add athelia service

--- a/evilwoods-server/ansible/roles/caddy/templates/global.caddyfile.j2
+++ b/evilwoods-server/ansible/roles/caddy/templates/global.caddyfile.j2
@@ -1,5 +1,7 @@
 {
-    {% if acme_staging_server is defined %}
+{% if acme_staging_server is defined %}
     acme_ca {{ acme_staging_server }}
-    {% endif %}
+{% endif %}
+
+    trusted_proxies {{ evilwoods_container_subnet }}
 }
