put fusion behing authelia

--- a/evilwoods-server/ansible/roles/fusion/templates/fusion.caddyfile.j2
+++ b/evilwoods-server/ansible/roles/fusion/templates/fusion.caddyfile.j2
@@ -1,3 +1,7 @@
 https://{{ fusion_url }} {
+    forward_auth {{ evilwoods_authelia_container_name }}:9091 {
+        uri /api/authz/forward-auth
+        copy_headers Remote-User Remote-Groups Remote-Email Remote-Name
+    }
     reverse_proxy {{ fusion_container_name }}:8080
 }
