--- a/evilwoods-server/ansible/roles/authelia/templates/authelia-configuration.yml.j2
+++ b/evilwoods-server/ansible/roles/authelia/templates/authelia-configuration.yml.j2
@@ -228,12 +228,12 @@ theme: 'auto'
 ## WebAuthn Configuration
 ##
 ## Parameters used for WebAuthn.
-# webauthn:
+webauthn:
   ## Disable WebAuthn.
-  # disable: false
+  disable: false
 
   ## Enables logins via a Passkey.
-  # enable_passkey_login: false
+  enable_passkey_login: false
 
   ## The display name the browser should show the user for when using WebAuthn to login/register.
   # display_name: 'Authelia'
