--- a/evilwoods-server/ansible/roles/authelia/templates/authelia-user-database.yml.j2
+++ b/evilwoods-server/ansible/roles/authelia/templates/authelia-user-database.yml.j2
@@ -1,9 +1,9 @@
 users:
   aitvaras:
     disabled: false
-    displayname: 'Aitvaras Sttagent'
-    password: '$argon2id$v=19$m=65536,t=3,p=4$9KaOTkeXIc9KwnGrKJ0W6w$WNhMZB5PpUYbosICjOtz6UKxeTeLuIyLEpERwgAHP/A'
-    email: 'aitvaras.sttagent@authelia.com'
+    displayname: 'Arvydas Ramanauskas'
+    password: '$argon2id$v=19$m=65536,t=3,p=4$5hjWzwvGzfXIXW+ow8F25g$pXbvlkAbOzNzVZO2qPtuQeNgn/9zlGMbS6+vGSuD8h8'
+    email: 'sttagent@ewmail.org'
     groups:
       - 'admins'
       - 'dev'
