--- a/evilwoods-server/ansible/roles/authelia/templates/authelia-user-database.yml.j2
+++ b/evilwoods-server/ansible/roles/authelia/templates/authelia-user-database.yml.j2
@@ -5,5 +5,14 @@ users:
     password: '$argon2id$v=19$m=65536,t=3,p=4$5hjWzwvGzfXIXW+ow8F25g$pXbvlkAbOzNzVZO2qPtuQeNgn/9zlGMbS6+vGSuD8h8'
     email: 'sttagent@ewmail.org'
     groups:
+      - 'user'
       - 'admins'
       - 'dev'
+
+  ryne:
+    disabled: false
+    displayname: 'Ryne Ramanauskas'
+    password: '$argon2id$v=19$m=65536,t=3,p=4$5hjWzwvGzfXIXW+ow8F25g$pXbvlkAbOzNzVZO2qPtuQeNgn/9zlGMbS6+vGSuD8h8'
+    email: 'zaren@ewmail.org'
+    groups:
+      - 'user'
