--- a/evilwoods-server/ansible/roles/authelia/templates/authelia-user-database.yml.j2
+++ b/evilwoods-server/ansible/roles/authelia/templates/authelia-user-database.yml.j2
@@ -2,7 +2,7 @@ users:
   aitvaras:
     disabled: false
     displayname: 'Arvydas Ramanauskas'
-    password: '$argon2id$v=19$m=65536,t=3,p=4$5hjWzwvGzfXIXW+ow8F25g$pXbvlkAbOzNzVZO2qPtuQeNgn/9zlGMbS6+vGSuD8h8'
+    password: '$argon2id$v=19$m=65536,t=3,p=4$ke3atIARCiBqZJ3S6BJ+xg$FyRnBXOjKPxuebyw08nDl9jBkpoBpYQwIZgk0yMzv/8'
     email: 'sttagent@ewmail.org'
     groups:
       - 'user'
