--- a/evilwoods-server/ansible/roles/authelia/templates/authelia-env.j2
+++ b/evilwoods-server/ansible/roles/authelia/templates/authelia-env.j2
@@ -1,5 +1,6 @@
+X_AUTHELIA_CONFIG=/config/config/
 X_AUTHELIA_CONFIG_FILTERS=template
 AUTHELIA_SESSION_SECRET_FILE=/run/secrets/{{ authelia_session_secret_name }}
 AUTHELIA_STORAGE_ENCRYPTION_KEY_FILE=/run/secrets/{{ authelia_storage_encryption_key_name }}
 AUTHELIA_NOTIFIER_SMTP_PASSWORD_FILE=/run/secrets/{{ authelia_notifier_smtp_password_name }}
-AUTHELIA_OIDC_HIMAC_SECRET_FILE=/run/secrets/{{ authelia_oidc_hmac_secret_name }}
+AUTHELIA_IDENTITY_PROVIDERS_OIDC_HMAC_SECRET_FILE=/run/secrets/{{ authelia_oidc_hmac_secret_name }}
