--- a/evilwoods-server/ansible/roles/authelia/templates/authelia-server.container.j2
+++ b/evilwoods-server/ansible/roles/authelia/templates/authelia-server.container.j2
@@ -1,5 +1,6 @@
 [Unit]
 Description={{ authelia_app_name }} container service.
+After=kitchenowl.service
 
 [Container]
 AutoUpdate=registry
@@ -8,8 +9,9 @@ Image={{ authelia_image }}
 Secret={{ authelia_session_secret_name }}
 Secret={{ authelia_storage_encryption_key_name }}
 Secret={{ authelia_notifier_smtp_password_name }}
+Secret={{ authelia_oidc_hmac_secret_name }}
 Secret={{ authelia_oidc_jwks_private_key_name }}
-Volume={{ authelia_config_path }}:/config:Z
+Volume={{ authelia_config_volume }}:/config:Z
 Pod={{ authelia_app_name }}.pod
 
 [Service]
