--- a/evilwoods-server/ansible/roles/kitchenowl/templates/kitchenowl-get-secrets.sh.j2
+++ b/evilwoods-server/ansible/roles/kitchenowl/templates/kitchenowl-get-secrets.sh.j2
@@ -3,4 +3,13 @@
 set -euo pipefail
 
 bws secret get {{ evilcloud_kitchenowl_jwt_secret_id }} | jq -r '.value' | \
-podman secret create --replace {{ kitchenowl_jwt_secret_name}} -
+podman secret create --replace {{ kitchenowl_jwt_secret_name }} -
+
+bws secret get {{ kitchenowl_oidc_client_id }} | jq -r '.value' | \
+podman secret create --replace {{ kitchenowl_oidc_client_name }} -
+
+bws secret get {{ kitchenowl_oidc_client_secret_id }} | jq -r '.value' | \
+podman secret create --replace {{ kitchenowl_oidc_client_secret_name }} -
+
+bws secret get {{ kitchenowl_oidc_client_secret_hash_id }} | jq -r '.value' | \
+podman secret create --replace {{ kitchenowl_oidc_client_secret_hash_name }} -
