--- a/evilwoods-server/ansible/roles/authelia/templates/authelia-get-secrets.sh.j2
+++ b/evilwoods-server/ansible/roles/authelia/templates/authelia-get-secrets.sh.j2
@@ -2,6 +2,14 @@
 
 set -euo pipefail
 
-bws secret get {{ authelia_session_secret_id }} | jq -r '.value' | podman secret create --replace {{ authelia_session_secret_name }} -
-bws secret get {{ authelia_storage_encryption_key_id }} | jq -r '.value' | podman secret create --replace {{ authelia_storage_encryption_key_name }} -
-bws secret get {{ authelia_notifier_smtp_password_id }} | jq -r '.value' | podman secret create --replace {{ authelia_notifier_smtp_password_name }} -
+bws secret get {{ authelia_session_secret_id }} | jq -r '.value' | \
+podman secret create --replace {{ authelia_session_secret_name }} -
+
+bws secret get {{ authelia_storage_encryption_key_id }} | jq -r '.value' | \
+podman secret create --replace {{ authelia_storage_encryption_key_name }} -
+
+bws secret get {{ authelia_notifier_smtp_password_id }} | jq -r '.value' | \
+podman secret create --replace {{ authelia_notifier_smtp_password_name }} -
+
+bws secret get {{ authelia_oidc_hmac_secret_id }} | jq -r '.value' | \
+podman secret create --replace {{ authelia_oidc_hmac_secret_name }} -
