add oidc jwks secret

--- a/evilwoods-server/ansible/roles/authelia/templates/authelia-configuration.yml.j2
+++ b/evilwoods-server/ansible/roles/authelia/templates/authelia-configuration.yml.j2
@@ -1261,22 +1261,22 @@ notifier:
 ##
 ## Identity Providers
 ##
-# identity_providers:
+identity_providers:
 
   ##
   ## OpenID Connect (Identity Provider)
   ##
   ## It's recommended you read the documentation before configuration of this section.
   ## See: https://www.authelia.com/c/oidc/provider
-  # oidc:
+  oidc:
     ## The hmac_secret is used to sign OAuth2 tokens (authorization code, access tokens and refresh tokens).
     ## HMAC Secret can also be set using a secret: https://www.authelia.com/c/secrets
     # hmac_secret: 'this_is_a_secret_abc123abc123abc'
 
     ## The JWK's issuer option configures multiple JSON Web Keys. It's required that at least one of the JWK's
     ## configured has the RS256 algorithm. For RSA keys (RS or PS) the minimum is a 2048 bit key.
-    # jwks:
-    # -
+    jwks:
+    -
       ## Key ID embedded into the JWT header for key matching. Must be an alphanumeric string with 7 or less characters.
       ## This value is automatically generated if not provided. It's recommended to not configure this.
       # key_id: 'example'
@@ -1288,7 +1288,7 @@ notifier:
       # use: 'sig'
 
       ## Required Private Key in PEM DER form.
-      # key: |
+      key: {{ '{{ secret "/run/secrets/' + authelia_oidc_jwks_private_key_name + '" | mindent 10 "|" | msquote }}'  }}
         # -----BEGIN RSA PRIVATE KEY-----
         # ...
         # -----END RSA PRIVATE KEY-----
