--- a/evilwoods-server/ansible/roles/authelia/templates/authelia-get-secrets.sh.j2
+++ b/evilwoods-server/ansible/roles/authelia/templates/authelia-get-secrets.sh.j2
@@ -13,3 +13,6 @@ podman secret create --replace {{ authelia_notifier_smtp_password_name }} -
 
 bws secret get {{ authelia_oidc_hmac_secret_id }} | jq -r '.value' | \
 podman secret create --replace {{ authelia_oidc_hmac_secret_name }} -
+
+bws secret get {{ authelia_oidc_jwks_private_key_id }} | jq -r '.value' | \
+podman secret create --replace {{ authelia_oidc_jwks_private_key_name }} -
