--- a/evilwoods-server/ansible/roles/authelia/templates/authelia-env.j2
+++ b/evilwoods-server/ansible/roles/authelia/templates/authelia-env.j2
@@ -1,3 +1,4 @@
+X_AUTHELIA_CONFIG_FILTERS=template
 AUTHELIA_SESSION_SECRET_FILE=/run/secrets/{{ authelia_session_secret_name }}
 AUTHELIA_STORAGE_ENCRYPTION_KEY_FILE=/run/secrets/{{ authelia_storage_encryption_key_name }}
 AUTHELIA_NOTIFIER_SMTP_PASSWORD_FILE=/run/secrets/{{ authelia_notifier_smtp_password_name }}
