--- a/ansible/roles/kitchenowl/templates/kitchenowl-authelia-config.yml.j2
+++ b/ansible/roles/kitchenowl/templates/kitchenowl-authelia-config.yml.j2
@@ -1,9 +1,9 @@
 identity_providers:
   oidc:
     clients:
-      - client_id: {{ '{{ secret "/run/secrets/' + kitchenowl_oidc_client_name + '" | mindent 10 "|" | msquote }}' }}
+      - client_id: {{ '{{ secret "/run/secrets/' + kitchenowl_oidc_client_name + '" | msquote }}' }}
         client_name: "kitchenowl"
-        client_secret: {{ '{{ secret "/run/secrets/' + kitchenowl_oidc_client_secret_hash_name + '" | mindent 10 "|" | msquote }}' }}
+        client_secret: {{ '{{ secret "/run/secrets/' + kitchenowl_oidc_client_secret_hash_name + '" | msquote }}' }}
         public: false
         authorization_policy: one_factor
         pre_configured_consent_duration: 1m
@@ -13,8 +13,8 @@ identity_providers:
           - profile
           - email
         redirect_uris:
-          - https://{{ kitchenowl_url }}/signin/redirect_uris
+          - https://{{ kitchenowl_url }}/signin/redirect
           - kitchenowl:///signin/redirect
         response_modes:
-        userinfo_signing_algorithm: none
+        userinfo_signed_response_alg: none
         token_endpoint_auth_method: client_secret_post
