put whole filename into var

--- a/ansible/roles/authelia/templates/authelia.pod.j2
+++ b/ansible/roles/authelia/templates/authelia.pod.j2
@@ -2,7 +2,7 @@
 Description={{ authelia_app_name }} pod service.
 
 [Pod]
-Network={{ evilwoods_container_network }}.network
+Network={{ evilwoods_container_network_file }}
 
 [Service]
 EnvironmentFile={{ evilwoods_runner_home }}/.config/bws/env
