--- a/ansible/roles/immich/templates/immich.pod.j2
+++ b/ansible/roles/immich/templates/immich.pod.j2
@@ -2,7 +2,7 @@
 Description={{ immich_app_name }} App service
 
 [Pod]
-Network={{ evilwoods_container_network }}.network
+Network={{ evilwoods_container_network_file }}
 
 [Service]
 Restart=always
