--- a/ansible/roles/searxng/templates/searxng.pod.j2
+++ b/ansible/roles/searxng/templates/searxng.pod.j2
@@ -2,7 +2,7 @@
 Description=SearXNG Pod
 
 [Pod]
-Network={{ evilwoods_container_network }}.network
+Network={{ evilwoods_container_network_file }}
 
 [Service]
 Restart=always
