--- a/ansible/roles/fusion/templates/fusion.container.j2
+++ b/ansible/roles/fusion/templates/fusion.container.j2
@@ -5,7 +5,7 @@ Description={{ fusion_app_name }} Container Service
 AutoUpdate=registry
 Image={{ fusion_image }}
 Volume={{ fusion_data_volume }}:/data:Z,U
-Network={{ evilwoods_container_network }}.network
+Network={{ evilwoods_container_network_file }}
 
 [Service]
 Restart=always
