--- a/ansible/roles/nextcloud/templates/nextcloud.pod.j2
+++ b/ansible/roles/nextcloud/templates/nextcloud.pod.j2
@@ -3,7 +3,7 @@ Description={{ nextcloud_app_name }} pod
 
 [Pod]
 AddHost={{ nextcloud_url }}:{{ evilwoods_caddy_ip }}
-Network={{ evilwoods_container_network }}.network
+Network={{ evilwoods_container_network_file }}
 
 [Service]
 Restart=always
