--- a/ansible/roles/ntfy/templates/ntfy.container.j2
+++ b/ansible/roles/ntfy/templates/ntfy.container.j2
@@ -6,7 +6,7 @@ After=caddy.service
 AutoUpdate=registry
 Image={{ ntfy_image }}
 Exec=serve
-Network={{ evilwoods_container_network }}.network
+Network={{ evilwoods_container_network_file }}
 
 [Service]
 Restart=always
