--- a/ansible/roles/kitchenowl/templates/kitchenowl-authelia-config.yml.j2
+++ b/ansible/roles/kitchenowl/templates/kitchenowl-authelia-config.yml.j2
@@ -14,7 +14,7 @@ identity_providers:
           - email
         redirect_uris:
           - https://{{ kitchenowl_url }}/signin/redirect
-          - kitchenowl:///signin/redirect
+          - kitchenowl:/signin/redirect
         response_modes:
         userinfo_signed_response_alg: none
         token_endpoint_auth_method: client_secret_post
